fix(Panoramax): z-index par défaut au-dessus des modales DSFR (#552)

--- a/src/packages/CSS/Controls/Panoramax/DSFRpanoramaxStyle.css
+++ b/src/packages/CSS/Controls/Panoramax/DSFRpanoramaxStyle.css
@@ -215,7 +215,7 @@
     padding: 0;
     border: 0;
     border-radius: 0;
-    z-index: 1000;
+    z-index: 2000;
 }
 .pnx-visualization-window-size-fullscreen-map {
     position: fixed;
